src/app/ui/better-drawer/better-drawer-container/better-drawer-container.component.scss
@import '../../../../variables';

:host {
  display: flex;
  flex-direction: row;
  justify-content: stretch;
  align-items: stretch;
  height: 100%
}

.content {
  flex-grow: 1;
  position: relative;
}

.side {
  position: relative;
  z-index: 44;
  transition: $transition-enter;
  height: 100%;
  min-width: 300px;
  max-width: 700px;
  background: transparent;
  border: 1px solid;
  border-right: 0;
  border-bottom: 0;
  //box-shadow: 0px 8px 10px -5px rgba(0, 0, 0, 0.2), 0px 16px 24px 2px rgba(0, 0, 0, 0.14), 0px 6px 30px 5px rgba(0, 0, 0, 0.12) !important;
  box-shadow: $whiteframe-shadow-1dp !important;
  @include scrollYImportant();

  @include lightTheme() {
    background: $light-theme-bg-darker;
    border-color: rgba(0, 0, 0, 0.12);
  }

  @include darkTheme() {
    background: $dark-theme-bg-slightly-lighter;
    border-color:  $dark-theme-extra-border-color;
  }

  :host.isOver & {
    position: fixed;
    width: 80vw !important;
    top: 0;
    bottom: 0;
    z-index: 100;
    right: -100%;

    @include mq(xs, max) {
      width: 90vw !important;
    }
  }
}


.backdrop {
  display: block;
  opacity: 0.6;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  position: fixed;
  z-index: 60;

  @include lightTheme() {
    background-color: rgba(var(--palette-background-card), 0.6);
  }
  @include darkTheme() {
    background-color: rgba(189, 189, 189, 0.6);
  }
}

